// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`component/GisidaLite renders component correctly: gisida lite render 1`] = `
<GisidaLite
  layers={
    Array [
      <MappedComponent
        data={
          Object {
            "geometry": Object {
              "coordinates": Array [
                0,
                0,
              ],
              "type": "Point",
            },
            "type": "Feature",
          }
        }
        symbolLayout={
          Object {
            "icon-image": "triangle-15",
          }
        }
      />,
    ]
  }
  mapComponents={
    Array [
      <MappedComponent
        position="top-right"
      />,
      <MappedComponent
        position="bottom-left"
      />,
    ]
  }
  mapConfigs={
    Object {
      "containerStyle": Object {
        "height": "100vh",
        "width": "100vw",
      },
      "style": "mapbox://styles/mapbox/streets-v9",
    }
  }
  reactMapboxGlMapFactoryUtilConfigs={
    Object {
      "accessToken": "pk.eyJ1Ijoib25hIiwiYSI6IlVYbkdyclkifQ.0Bz-QOOXZZK01dq4MuMImQ",
      "attributionControl": true,
      "customAttribution": "&copy; ONA Engineering",
      "injectCSS": true,
    }
  }
/>
`;

exports[`component/GisidaLite renders props correctly: gisida lite props 1`] = `
Object {
  "layers": Array [
    <MappedComponent
      data={
        Object {
          "geometry": Object {
            "coordinates": Array [
              0,
              0,
            ],
            "type": "Point",
          },
          "type": "Feature",
        }
      }
      symbolLayout={
        Object {
          "icon-image": "triangle-15",
        }
      }
    />,
  ],
  "mapComponents": Array [
    <MappedComponent
      position="top-right"
    />,
    <MappedComponent
      position="bottom-left"
    />,
  ],
  "mapConfigs": Object {
    "containerStyle": Object {
      "height": "100vh",
      "width": "100vw",
    },
    "style": "mapbox://styles/mapbox/streets-v9",
  },
  "reactMapboxGlMapFactoryUtilConfigs": Object {
    "accessToken": "pk.eyJ1Ijoib25hIiwiYSI6IlVYbkdyclkifQ.0Bz-QOOXZZK01dq4MuMImQ",
    "attributionControl": true,
    "customAttribution": "&copy; ONA Engineering",
    "injectCSS": true,
  },
}
`;
